# exactdiag

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
docs/: overview.md
examples/: README.md
examples/tJ_spin_half_ladder/: all_ks_eigvals.json  all_ks_eigvals.py  custom_figure.json  custom_figure.py  hole_position_correlations.json  hole_position_correlations.py  load_matrix.py  multiple_spectra.json  multiple_spectra.py  rung_current_spectrum.json  rung_current_spectrum.py  singlet-singlet_correlations.json  singlet-singlet_correlations.py  untested_Sz_position_correlations.json  untested_Sz_position_correlations.py
examples/tJ_spin_half_ladder/energy_contributions_in_excited_state/: functions.py  plottig.ipynb
examples/tJ_spin_half_ladder/inter_ladder_conductivity/: functions.py  plotting.ipynb
src/exactdiag/: logging_config.json  logging_utils.py  plotting.py  utils.py
src/exactdiag/general/: basis_indexing.h  basis_indexing.pxd  column_functions.h  column_functions.pxd  configs.py  cpp_classes.h  cpp_classes.pxd  cpp_classes.pyx  cpp_sparse_dot.h  cython_lanczos_diagonalization.pyx  cython_sparse_dot.pxd  cython_sparse_dot.pyx  cython_sparse_matrices.pxd  cython_sparse_matrices.pyx  lanczos_diagonalization.py  matrix_rules_utils.pxd  matrix_rules_utils.pyx  symmetry.h  (+7 more)
tests/tJ_spin_half_ladder/: _state_inspection.py  hole_correlations.py  position_correlations.py  test_basis_indexing.py  test_basis_size.py  test_eigvals.py  test_examples.py  test_imports.py  test_matrix_setup.py  test_position_correlations.py
(+93 files in other folders)
